--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 
 <div id="Forum" class="tabcontent" style="display: active;">
     This is forum tab
+    <br>
+    <button onclick="loadThemes()">Load Themes</button>
+    <script src="./js/forum.js"></script>
 </div>
 
 </body>
