themes are loaded and shown

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 <div id="Forum" class="tabcontent" style="display: active;">
     This is forum tab
     <br>
-    <button onclick="loadThemes()">Load Themes</button>
+    <div id="forum_themes"></div>
     <script src="./js/forum.js"></script>
 </div>
 
