login: compare with stored, read display name, check admin

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ USER LOGIN BLOCK
  -->
 <div id="login-bar" style="padding: 10px; background: #eef; display: flex; gap: 10px; align-items: center;">
   <label for="username">Username:</label>
-  <input type="text" id="username" placeholder="Enter your name">
-  <button onclick="loginUser()">Login</button>
+  <input type="password" id="username" placeholder="Enter your name">
+  <button id="login_btn" onclick="loginUser()">Login</button>
   <span id="login-status" style="margin-left: 10px; font-weight: bold;"></span>
 </div>
-<script src="./js/currentUser.js"></script>
+<script src="./js/login.js"></script>
 
     <h1> Travelers Group </h1>
 
