update status footer added

--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
     <script src="./js/forum.js"></script>
 </div>
 
+<div class="footer">
+    <p>Website updated on: July 18, 2025, 7:45AM; 
+    <!-- Contact <a href="mailto:dfilippova@gmail.com ">Daria Filippova</a> for any questions</p> -->
+</div> 
+
 </body>
 
 </html>
