--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 </div>
 
 <div class="footer">
-    <p>Website updated on: July 20, 2025, 1:58PM; 
+    <p>Website updated on: July 21, 2025, 11:42AM; 
     <!-- Contact <a href="mailto:dfilippova@gmail.com ">Daria Filippova</a> for any questions</p> -->
 </div> 
 
