--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ TAB LINKS
 <div id="Presentations" class="tabcontent" style="display: block;">
 
 <p>
-    The Travelers group, composed of both individuals and couples, typically meets from 5:00 PM to 7:00 PM on the 4th Sunday of the month from September through May.  The schedule for 2024-2025 may have some exceptions due to holidays.  Each month one or more members present hints and highlights about trips they have taken; from Yellowstone to Bhutan, from Ireland to Indonesia. Meetings are held in members’ homes or occasionally in a larger venue (which allows for more participants) and feature pot-luck food and beverage items. Members are requested to host, co-host, and/or present periodically.
+    The Travelers group, composed of both individuals and couples, typically meets from 5:00 PM to 7:00 PM on the 4th Sunday of the month from September through May.  The schedule for 2025-2026 may have some exceptions due to holidays.  Each month one or more members present hints and highlights about trips they have taken; from Yellowstone to Bhutan, from Ireland to Indonesia. Meetings are held in members’ homes or occasionally in a larger venue (which allows for more participants) and feature pot-luck food and beverage items. Members are requested to host, co-host, and/or present periodically.
 </p>
 
 <hr>
@@ -233,7 +233,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> download the
 </div>
 
 <div class="footer">
-    <p>Website updated on: July 25, 2025, 5:42PM; 
+    <p>Website updated on: July 29, 2025, 9:30AM; 
     <!-- Contact <a href="mailto:dfilippova@gmail.com ">Daria Filippova</a> for any questions</p> -->
 </div> 
 
