--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <script src="./js/scripts.js"></script>
+<script src="./js/visitors_counter.js"></script>
 <script src="./js/forum_functions.js"></script>
 <body>
 
