displaying total, unique, week, unique-week counts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <script src="./js/scripts.js"></script>
-<script src="./js/visitors_counter.js"></script>
 <script src="./js/forum_functions.js"></script>
 <body>
 
@@ -234,9 +233,13 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> to download 
 </div>
 
 <div class="footer">
+    <div id="visitors-counter">aaa</div>
     <p>Website updated on: July 29, 2025, 11:10AM; 
     <!-- Contact <a href="mailto:dfilippova@gmail.com ">Daria Filippova</a> for any questions</p> -->
 </div> 
+
+<script src="./js/visitors_counter.js"></script>
+
 
 </body>
 
