--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Click <a href="./data/schedules/Schedule 2025 - 2026.xlsx">HERE</a> to download 
 
 <div class="footer">
     <div id="visitors-counter">aaa</div>
-    <p>Website updated on: July 29, 2025, 11:10AM; 
+    <p>Website updated on: July 30, 2025, 12:40PM; 
     <!-- Contact <a href="mailto:dfilippova@gmail.com ">Daria Filippova</a> for any questions</p> -->
 </div> 
 
