--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Click <button id="download_btn">HERE</button> to download the Excel file
 
 <div class="footer">
     <div id="visitors-counter">aaa</div>
-    <p>Website updated on: July 30, 2025, 12:40PM; 
+    <p>Website updated on: Aug 13, 2025, 11:25AM; 
     <!-- Contact <a href="mailto:dfilippova@gmail.com ">Daria Filippova</a> for any questions</p> -->
 </div> 
 
